[gd_scene load_steps=9 format=3 uid="uid://dul6k01rd31do"]

[ext_resource type="Theme" uid="uid://cwmjrgohke0do" path="res://theme/main_theme.tres" id="1_xh4h3"]
[ext_resource type="Script" path="res://view/edit_timer_simple_view/edit_timer_simple_view.gd" id="2_xmcwl"]
[ext_resource type="Shader" path="res://shader/panel_blur.gdshader" id="3_va8h0"]
[ext_resource type="PackedScene" uid="uid://cg0cv8bdlydbp" path="res://component/timer_setter/timer_setter.tscn" id="4_m43vd"]
[ext_resource type="PackedScene" uid="uid://dfqe06eonvy7d" path="res://component/color_picker/color_picker.tscn" id="5_4eelq"]
[ext_resource type="Texture2D" uid="uid://bthubo55jn7b" path="res://asset/img/button-delete.png" id="6_7uti2"]
[ext_resource type="Texture2D" uid="uid://c21t28dluvwtg" path="res://asset/img/button-done.png" id="6_ci6kk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sv0m5"]
shader = ExtResource("3_va8h0")
shader_parameter/panel_color = null
shader_parameter/alpha = 0.5

[node name="AddTimerView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xh4h3")
script = ExtResource("2_xmcwl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
material = SubResource("ShaderMaterial_sv0m5")
layout_mode = 2
focus_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
focus_mode = 1
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 60

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Add A New Timer"
horizontal_alignment = 1

[node name="TitleLineEdit" type="LineEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
placeholder_text = "Title"
alignment = 1

[node name="TimerGroupSetupHBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TimerGroupSetupHBox"]
layout_mode = 2
text = "Sequential"

[node name="TimerSetter" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_m43vd")]
unique_name_in_owner = true
layout_mode = 2

[node name="ColorPicker" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_4eelq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="OkButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ok"
icon = ExtResource("6_ci6kk")

[node name="DeleteButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_7uti2")

[connection signal="focus_entered" from="MarginContainer/PanelContainer" to="." method="_on_panel_container_focus_entered"]
[connection signal="text_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleLineEdit" to="." method="_on_title_line_edit_text_changed"]
[connection signal="color_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
